# buildAgent

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README-DEVELOPERS.md  README-LEARNERS.md  README-USERS.md  README.md  agent.py  greet.py  main.py  pyproject.toml
.claude/: settings.local.json
PLAN/: README.md
PLAN/s01-agent-loop/: S01-Summary.md
PLAN/s02-tools/: RESULT.md
PLAN/s03-todowrite/: RESULT.md  TODO.md
PLAN/s04-subagents/: RESULT.md  S04-Summary.md  TODO.md
PLAN/s05-skills/: RESULT.md  TODO.md
PLAN/s06-compact/: RESULT.md  S06-Summary.md  TODO.md
PLAN/s07-tasks/: RESULT.md  TODO.md
PLAN/s08-background/: RESULT.md  S08-Summary.md  TODO.md
PLAN/s09-teams/: RESULT.md  TODO.md
PLAN/s10-protocols/: RESULT.md  TODO.md
PLAN/s11-autonomous/: RESULT.md  S11-Summary.md  TODO.md
PLAN/s12-worktree/: RESULT.md  S12-Summary.md  TODO.md
agent/: __init__.py
agent/agents/: __init__.py  calendar_agent.py  document_agent.py  email_agent.py  file_agent.py  main_agent.py  schedule_agent.py  search_agent.py
agent/core/: __init__.py  autonomous.py  background.py  compact.py  dispatch.py  loop.py  protocols.py  skills.py  subagent.py  tasks.py  teams.py  (+2 more)
backend/: __init__.py  server.py
config/: default.py
plan/: README.md
tests/: conftest.py  test_s01_agent_loop.py  test_s02_tools.py  test_s03_todowrite.py  test_s04_subagents.py  test_s05_skills.py  test_s06_compact.py  test_s07_tasks.py  test_s08_background.py  test_s09_teams.py  test_s10_protocols.py  test_s11_autonomous.py  test_s12_worktree.py
ui/: index.html  package-lock.json  package.json
(+111 files in other folders)
